--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,19 @@
 <h1>Create a new Pet</h1>
+<%binding.pry%>
+<form action="/pets" method="post">
+    <label>Pet's Name:</label>
+    <input type="text" name="pet[name]" id="pet_name"><br>
 
+    <h3>Existing owners</h3>
+
+    <label>Owners:</label><br>
+    <%Owner.all.each do |owner|%>
+         <input type="checkbox" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>"><%= owner.name %> 
+    <%end%><br><br>
+
+
+        <h3>Create new Owner</h3>
+           <label for="">Owner's Name:</label> <input type="text" name="owner[name]" id="owner_name"><br>
+
+    <input type="submit" value="Create Pet">
+</form>
