--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,3 +1,21 @@
 <h1>Update Pet</h1>
+<form action="/pets/<%=@pet.id%>" method="post">
+    <label>Pet's Name:</label>
+    <input type="hidden" name="_method" value="patch" id="hidden">
+    <input type="text" name="pet[name]" id="pet_name" value="<%=@pet.name%>"><br>
+    <h3>Existing owners</h3>
+
+    <label>Owners:</label><br>
+    <%@owners.each do |owner|%>
+         <input type="radio" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>" <%= 'checked' if @pet.owner == owner %>> <%= owner.name %> 
+    <%end%><br><br>
 
 
+    <h3>Edit Owner</h3>
+    <label for="">Owner's Name:</label> <input type="text" name="owner[name]" id="owner_name" ><br>
+
+    <h3>New Owner</h3>
+    <label for="">Create Owner</label>
+
+    <input type="submit" value="Update Pet">
+</form>
