--- a/app/views/pets/index.erb
+++ b/app/views/pets/index.erb
@@ -4,7 +4,7 @@
    <ul style="list-style-type: none;">
         <li>Pets name:
             <a href="/pets/<%=pet.id%>/edit" style="text-decoration: none;"> <%=pet.name%> </a>
-            <span> Owner's name: <%=pet.owner%></span> 
+            <span> Owner's name: <%=pet.owner.name%></span> 
         </li>
    </ul> 
 
