--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -2,7 +2,7 @@ show.erb
 
 <body>
     <p><%=@pet.name%> Is this cats name </p>
-    <p> This pet belongs to the owner <%=@pet.owner%></p>
+    <p> This pet belongs to the owner <%=@pet.owner.name%></p>
 
-    <a href="pets/<%=@pet.id%>/edit">Edit Pet</a>
+    <a href="/pets/<%=@pet.id%>/edit">Edit Pet</a>
 </body>
